# cs4361

assignment1/: Assignment1_CG.docx  Instruction_for_Windows.docx
assignment1/code_files/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
